--- a/index.html
+++ b/index.html
@@ -6,11 +6,55 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/home.css">
 </head>
 <body>
     <div id="head-nav"></div>
-    <main>  </main>
+    <main>
+      <div class="hero-wrapper">
+        <section class="hero">
+          <h1>
+            Rent Smarter. Live Better.
+          </h1>
+          <p>
+            From tools to tech, bicycle to projectors —<br />
+            everything you need, when you need it, all in one place.
+          </p>
+          
+          <!-- Regular search bar -->
+          <div class="search">
+              <input type="text" id="main-search" placeholder="Search rentals..." />
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                  <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.397l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85zM6.5 11.5a5 5 0 1 1 0-10 5 5 0 0 1 0 10z"/>
+                </svg>
+          </div>
+          
+          <!-- Overlay for focused search -->
+          <div class="search-overlay" id="searchOverlay">
+              <div class="search-centered">
+                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
+                      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.397l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85zM6.5 11.5a5 5 0 1 1 0-10 5 5 0 0 1 0 10z"/>
+                  </svg>
+                  <input type="text" id="overlay-search" placeholder="Search rentals..." />
+              </div>
+          </div>
+
+          <div class="filters">
+            <button id="featured" class="category-btn" onclick="loadCategory('featured')">Featured</button>
+            <button id="electronics" class="category-btn" onclick="loadCategory('electronics')">Electronics</button>
+            <button id="powertools" class="category-btn" onclick="loadCategory('powertools')">Power Tools</button>
+            <button id="digital" class="category-btn" onclick="loadCategory('digital')">Digital</button>
+            <button id="tbd" class="category-btn" onclick="loadCategory('tbd')">TBD</button>
+
+          </div>
+        </section>
+      </div>
+      <!-- category part -->
+      <div id="product-section"></div>
+
+    </main>
     <div id="footer"></div>
     <script src="/js/main.js" defer></script>
+    <script src="/js/home.js" defer></script>          
 </body>
 </html>
