--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,15 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
+  <title>Sign in to RentHub</title>
+  <link rel="stylesheet" href="../css/auth.css"/>
 </head>
 <body>
-    <div id="head-nav"></div>
-    <div id="footer"></div>
-    <script src="/js/main.js"></script>
+  <div class="container">
+    <div class="card">
+      <div class="content">
+        <div class="logo">
+          <img src="../images/logo.svg" alt="RentHub Logo" />
+        </div>
+        <h2>Create your account</h2>
+        <p>Welcome! Please fill in the details to get started.</p>
+
+        <button class="google-btn">
+          <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google" />
+          Continue with Google
+        </button>
+
+        <div class="divider"><span>or</span></div>
+
+        <form>
+          <label for="email">Email address</label>
+          <input type="email" id="email" placeholder="Enter your email address" required />
+          <button type="submit" class="continue-btn">Continue ▸</button>
+        </form>
+      </div>
+      <div class="card-footer">
+        Already have an account? <a href="login.html">Log in</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
