--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <button id="electronics" class="category-btn" onclick="loadCategory('electronics')">Electronics</button>
             <button id="powertools" class="category-btn" onclick="loadCategory('powertools')">Power Tools</button>
             <button id="digital" class="category-btn" onclick="loadCategory('digital')">Digital</button>
-            <button id="tbd" class="category-btn" onclick="loadCategory('tbd')">TBD</button>
+            <button id="all" class="category-btn" onclick="loadCategory('all')">ALL</button>
 
           </div>
         </section>
@@ -52,8 +52,8 @@
       <!-- category part -->
       <div id="product-section"></div>
 
+      <div id="footer"></div>
     </main>
-    <div id="footer"></div>
     <script src="/js/main.js" defer></script>
     <script src="/js/home.js" defer></script>          
 </body>
