Category section modified

--- a/index.html
+++ b/index.html
@@ -44,13 +44,17 @@
             <button id="electronics" class="category-btn" onclick="loadCategory('electronics')">Electronics</button>
             <button id="powertools" class="category-btn" onclick="loadCategory('powertools')">Power Tools</button>
             <button id="digital" class="category-btn" onclick="loadCategory('digital')">Digital</button>
-            <button id="all" class="category-btn" onclick="loadCategory('all')">ALL</button>
 
           </div>
         </section>
       </div>
       <!-- category part -->
-      <div id="product-section"></div>
+      <section class="product-category">
+        <h1 id="category-heading"></h1>
+        <div class="product-grid" id="product-grid">
+          <!-- Cards will be inserted here by JavaScript -->
+        </div>
+      </section>
 
       <div id="footer"></div>
     </main>
